src/objects/Customer_Segmentation__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Sales_Segmentation__c</fullName>
        <description>R5 - Picklist Field to choose Segment</description>
        <inlineHelpText>A-Top Accounts(roughly5% of active ones)with high potential
B-Medium/Large Accounts(roughly10%)with important potential
C-Standard Accounts(roughly70%)handled directly by Account Manager
D-Smaller Accounts(roughly10%)mainly addressed to ChannelPartners</inlineHelpText>
        <label>Account Sales Segmentation</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DIV__c</fullName>
        <description>R5 Division</description>
        <label>DIV</label>
        <picklist>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <description>R5 - Visual Flag Indicator</description>
        <formula>IF( ISPICKVAL( PIE_Customer_Marketing_Segmentation__c, &quot;Preferred Supplier&quot;), IMAGE(&quot;/resource/GreenFlag&quot;, &quot;Green&quot;,30,30), IF( ISPICKVAL( PIE_Customer_Marketing_Segmentation__c, &quot;Supplier amongst others&quot;), IMAGE(&quot;/resource/YellowFlag&quot;, &quot;Yellow&quot;,30,30), IF( ISPICKVAL( PIE_Customer_Marketing_Segmentation__c, &quot;Weak or not approved supplier&quot;),  IMAGE(&quot;/resource/RedFlag&quot;, &quot;Red&quot;,30,30), 
IF( ISPICKVAL( PIE_Customer_Marketing_Segmentation__c, &quot;Not applicable&quot;),IMAGE(&quot;/resource/BlackFlag&quot;, &quot;Black&quot;,30,30), IF ( ISPICKVAL( PIE_Customer_Marketing_Segmentation__c, &quot;Others&quot;), 
IMAGE(&quot;/resource/GreyFlag1&quot;, &quot;Grey&quot;,30,30), &quot;&quot; )))))</formula>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Growth_Potential_Year__c</fullName>
        <description>R5 Growth Potential Year</description>
        <inlineHelpText>The year which referes to the segmenatation</inlineHelpText>
        <label>Account Segmentation Year</label>
        <picklist>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Growth_Potential__c</fullName>
        <label>Growth Potential %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Industry_Usage__c</fullName>
        <description>R5 - Industry Usage  for Customer Segmentation</description>
        <label>Industry Usage</label>
        <picklist>
            <picklistValues>
                <fullName>BLD.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.8.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Segmentation_Year__c</fullName>
        <description>R5 Marketing Segmentation Year</description>
        <inlineHelpText>The year which refers to the segmentation</inlineHelpText>
        <label>Heat Map Segmentation Year</label>
        <picklist>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PIE_Customer_Marketing_Segmentation__c</fullName>
        <description>R5 - PIE Customer Marketing Segmentation</description>
        <inlineHelpText>ABB position at the Account</inlineHelpText>
        <label>Heat Map</label>
        <picklist>
            <picklistValues>
                <fullName>Preferred Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier amongst others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weak or not approved supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup to Product Group</description>
        <inlineHelpText>The enter PG will automatically update both the assigned Division &amp; BU in the above fields for this particular PG.</inlineHelpText>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Account Segmentations</relationshipLabel>
        <relationshipName>Customer_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 Product</description>
        <inlineHelpText>The enter Product Line will automatically update the assigned Division,  BU and PG in the above fields for this particular Product Line</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Account Segmentations</relationshipLabel>
        <relationshipName>Customer_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment_Level__c</fullName>
        <inlineHelpText>Segmentation Level must always match to the values entered on the fields DIV,BU,Product Group,Product. For Example;Choose &quot;Division&quot; on segmentation level and populate up to DIV drop down list.</inlineHelpText>
        <label>Segment Level</label>
        <picklist>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Line</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segmentation_6__c</fullName>
        <description>R5 - Segmentation 6</description>
        <inlineHelpText>Local sales segmentation requirements</inlineHelpText>
        <label>Segmentation 6</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Check__c</fullName>
        <description>R5 Unique Check</description>
        <label>Unique Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Year_1__c</fullName>
        <description>R5 - Year +1 Calculation</description>
        <formula>TEXT(VALUE(TEXT(Growth_Potential_Year__c)) + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year +1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_2__c</fullName>
        <description>R5 - Year +2 Calculation</description>
        <formula>TEXT(VALUE(TEXT(Growth_Potential_Year__c)) + 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year +2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_3__c</fullName>
        <description>R5 - Year +3 Calculation</description>
        <formula>TEXT(VALUE(TEXT(Growth_Potential_Year__c)) + 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year +3</label>
        <type>Text</type>
    </fields>
    <label>Account Segmentation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Customer_Segmentation</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>PIE_Customer_Marketing_Segmentation__c</columns>
        <columns>Flag__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer_Segmentation__c.Customer_Sales_Segmentation,Customer_Segmentation__c.Customer_Marketing_Segmentation</value>
        </filters>
        <label>Customer Segmentation</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CS - {0000}</displayFormat>
        <label>Account Segmentation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Segmentations</pluralLabel>
    <recordTypes>
        <fullName>Customer_Marketing_Segmentation</fullName>
        <active>true</active>
        <description>Segmentation of the account from a  product marketing perspective, to monitor the ABB ranking as a supplier for each Division/BU (Heat Maps)</description>
        <label>Heat Maps</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Sales_Segmentation</fullName>
        <active>true</active>
        <description>Account classification, definable at Division/BU/PG/PL level,  from a sales potential perspective, channel, industry usage and business segment.</description>
        <label>Account Sales Segmentation</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Segment_Level_Validation</fullName>
        <active>true</active>
        <description>R5:Segment level must always match the hierarchy entered by the user in Division/Business Unit/Product Group/Product Line</description>
        <errorConditionFormula>OR( 
(TEXT(Business_Line_BU__c) != NULL &amp;&amp; TEXT(Segment_Level__c) == &apos;Division&apos;),
( (Product_Group__c != NULL || Product__c != NULL) &amp;&amp; (TEXT(Segment_Level__c) == &apos;Division&apos; || TEXT(Segment_Level__c) == &apos;Business Unit&apos;)),
( (Product__c != NULL) &amp;&amp; (TEXT(Segment_Level__c) != &apos;Product Line&apos;))
)</errorConditionFormula>
        <errorMessage>Segment level must always match the hierarchy entered by the user in Division/Business Unit/Product Group/Product Line</errorMessage>
    </validationRules>
</CustomObject>